# market-pipeline

./: .gitignore  Attributes.py  Backfill_Live_Orchestrator.py  QueueManager.py  README.md  RollingMetric.py  _flush_redis.py  dashboard.html  dashboard_server.py  launch.bat  pipeline.py  pyproject.toml
Managers/: ProcessManager.py  QueueManager.py  RedisConnectionPool.py  SubscriptionManager.py
Services/: registry.py
Services/Dashboard_Server/: history.py  mappers.py  server.py
Services/Metrics/: RollingMetric.py  run_all.py
Services/Metrics/MetricWorkers/: bollinger.py  ema.py  high.py  low.py  momentum.py  sma.py  volume.py  vwma.py
docs/: index.html
orchestration/: process_manager.py  registry.py
services/dashboard_server/: history.py  mappers.py  server.py  stats.py
services/data/: backfill_binance.py  data_aggregation.py  live_binance.py
services/metrics/: rolling_metric.py  run_all.py
services/metrics/workers/: bollinger.py  ema.py  high.py  low.py  momentum.py  sma.py  volume.py  vwma.py
shared/: constants.py  logging_setup.py  redis_pool.py  redis_streams.py  symbols.py
shared/Instruments/: crypto_futures.txt
