[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "market-pipeline"
version = "0.1.0"
description = "Real-time Binance futures market-data pipeline with rolling metrics and a live dashboard."
requires-python = ">=3.10"
dependencies = [
    "redis>=5.0",
    "websockets>=12.0",
    "python-binance>=1.0",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "numpy>=1.24",
    "psutil>=5.9",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["orchestration*", "services*", "shared*"]
